# end-to-end-ai-sdlc

./: .dockerignore  .env.example  .gitignore  ACCESSIBILITY_TESTING_REPORT.md  Dockerfile  README.md  pyproject.toml  requirements.txt
.github/agents/: copilot-instructions.md
.github/workflows/: deploy.yml
.specify/memory/: constitution.md
scripts/: create_github_issues.py  setup-azure-oidc.ps1  setup-azure-oidc.sh
specs/001-realtime-city-weather/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-realtime-city-weather/checklists/: requirements.md
specs/001-realtime-city-weather/contracts/: openapi.yaml
specs/002-weather-frontend/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-help-faq-page/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-geolocation-button/: architecture.md  spec.md  tasks.md
specs/005-azure-container-apps-cicd/: architecture.md  spec.md  tasks.md
specs/011-recent-search-history/: plan.md  quickstart.md  research.md  spec.md  tasks.md
src/: __init__.py  main.py
src/application/: __init__.py  interfaces.py
src/application/use_cases/: __init__.py  get_forecast.py  get_weather.py
src/domain/: __init__.py  entities.py  exceptions.py  value_objects.py
src/infrastructure/: __init__.py  cache.py  config.py  logging.py  weather_provider.py
src/presentation/: __init__.py  dependencies.py  exception_handlers.py  middleware.py  schemas.py
src/presentation/routers/: __init__.py  health.py  weather.py
static/: index.html
tests/: conftest.py
tests/integration/: test_api.py
tests/unit/: test_cache.py  test_entities.py  test_exceptions.py  test_forecast_use_case.py  test_use_cases.py
